Fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -26,7 +26,7 @@ a {
     color: $fg-color;
     font-size: $title_font-size;
     font-weight: 700;
-    margin-top:10px;
+    margin-top:20px;
 }
 
 .title {
@@ -42,10 +42,5 @@ a {
 }
 
 section {
-    margin-top: 10px;
-}
-
-img {
-    width: 16px;
-    height:16px;
+    margin-top: 20px;
 }
